modif taille box

--- a/index.css
+++ b/index.css
@@ -2,11 +2,12 @@
   body {
     margin: 2rem;
     font: 12px system-ui;
+    background-color: rgb(34, 32, 32);
   }
 
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1rem;
     /*grid-template-columns: 50px 50px 50px 50px;*/
     grid-template-rows: auto;
@@ -16,10 +17,11 @@
       "footer footer footer footer";
   }
 
-  .container > div{
+  .container div{
     background: #EDE7F6;
     padding: 1.5rem;
     border-radius: 1rem;
+    justify-self: stretch;
   }
 
   .container div img {
