--- a/index.css
+++ b/index.css
@@ -12,8 +12,8 @@
     /*grid-template-columns: 50px 50px 50px 50px;*/
     grid-template-rows: auto;
     grid-template-areas: 
-      "header header header2 header2"
-      "main main2 . sidebar"
+      "header header2 header2 header2"
+      "main main2 main2 sidebar"
       "footer footer footer footer";
   }
 
