--- a/index.css
+++ b/index.css
@@ -12,12 +12,49 @@
     text-decoration: underline;
     color: rgb(24, 25, 29);
   }
+/*
+  .navbar{
+    margin-right: auto;
+    margin-left: auto;
+    padding: 10px;
+  }
+
+  ul{
+    border-radius: 5px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(80, 65, 42);
+}
+
+  .navbar li{
+    float: left;
+    border-right: 1px solid #bbb;
+}
+
+  .navbar li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+  .navbar li a:hover {
+    background-color: #111;
+    color: white;
+  }
+
+  .navbar li:last-child {
+    border-right: none;
+  }
+*/
 
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1rem;
-    /*grid-template-columns: 50px 50px 50px 50px;*/
     grid-template-rows: auto;
     grid-template-areas: 
       "header header header2 header2"
@@ -55,4 +92,43 @@
   }
   .item6 {
     grid-area: footer;
+  }
+
+  @media only screen and (max-width: 1024px) {
+    .container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr 1.2fr 1.2fr 1fr;
+      grid-template-areas:
+        "header"
+        "header2"
+        "main"
+        "main2"
+        "sidebar"
+        "footer";
+    }
+    .container .item1{
+      background-color: rgb(172, 161, 126);
+    }
+  }
+  
+  @media only screen and (max-width: 640px) {
+    .container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr 1.2fr 1.2fr 1fr;
+      grid-template-areas:
+        "header"
+        "header2"
+        "main"
+        "main2"
+        "sidebar"
+        "footer";
+    }
+  }
+
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
   }
