--- a/index.css
+++ b/index.css
@@ -1,31 +1,28 @@
 
-  body {
-    margin: 2rem;
-    font: 12px system-ui;
-    font-family: 'Courgette', cursive;    font-size: 20px;
-    font-weight: 800;
-    color: rgb(48, 58, 66);
-    background-color: rgb(34, 32, 32);
-  }
+body {
+  margin: 2rem;
+  font: 12px system-ui;
+  font-family: 'Courgette', cursive;    font-size: 20px;
+  font-weight: 800;
+  color: rgb(48, 58, 66);
+  background-color: rgb(34, 32, 32);
+}
 
-  span{
-    text-decoration: underline;
-    color: rgb(24, 25, 29);
-  }
+span{
+  text-decoration: underline;
+  color: rgb(24, 25, 29);
+}
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 1rem;
-    /*grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 1rem;
-    grid-template-rows: auto;*/
-    grid-template-areas: 
-      "nav  nav nav nav"
-      "header header header2 header2"
-      "main main2 main2 sidebar"
-      "footer footer footer footer";
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
+  grid-template-areas: 
+    "nav  nav nav nav"
+    "header header2 header2 header2"
+    "header main main2 main2"
+    "footer footer footer sidebar";
+}
 
   .container div{
     background: #EDE7F6;
@@ -96,7 +93,6 @@
   @media only screen and (max-width: 1200px) {
     .container {
       grid-template-columns: 1fr;
-      grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr 1.2fr 1.2fr 1fr;
       grid-template-areas:
         "nav"
         "header"
@@ -114,7 +110,6 @@
   @media only screen and (max-width: 640px) {
     .container {
       grid-template-columns: 1fr;
-      grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr 1.2fr 1.2fr 1fr;
       grid-template-areas:
         "nav"
         "header"
@@ -124,12 +119,4 @@
         "sidebar"
         "footer";
     }
-  }
-
-  .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.4s;
   }
